<resources>
    <string name="app_name">Predix.ai</string>
    <string name="menu_home">Home</string>
    <string name="pick_model">Pick model:</string>
    <string name="image_upload">Image Upload</string>
    <string name="button_upload">Button upload</string>
    <string name="result_detection">Result detection</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="menu_profile">Profile</string>
    <string name="welcome_message">Detect your disease\nwith predix.ai</string>
    <string name="welcome_title">Welcome</string>
    <string name="details_title">Details</string>
    <string name="model_image">Model Image</string>
    <string name="start_detection">Start Detection</string>
    <string name="detection">Detection</string>
    <string name="detect">Detect</string>
    <string name="by_predix_team">by Predix.team</string>
    <string name="logo_app">Logo app</string>
    <string name="poster_onboard">Poster onboard</string>
    <string name="pneumonia">Pneumonia Disease Detected</string>
    <string name="normal">Normal</string>
    <string name="tbc">TBC Disease Detected</string>
    <string name="menu_article">Article</string>
    <string name="article">Article</string>
    <string name="article_image">Article image</string>
    <string name="id">ID</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="image_profile">Image Profile</string>
    <string name="logout">Logout</string>
    <string name="title_onboard_first">Detection Disease</string>
    <string name="content_onboard_first">You can detect your disease by testing the results of the chest x-ray</string>
    <string name="title_onboard_second">Learn more the disease</string>
    <string name="content_onboard_second">Let\'s learn about diseases that can be detected in this application</string>
    <string name="title_onboard_third">Read Article About Healthcare</string>
    <string name="content_onboard_third">You can read articles related to health that can help you in your daily life</string>
    <string name="upload_image_first">Upload image first!</string>
</resources>