<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.DetectionActivity">

    <ImageView
        android:id="@+id/img_upload"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_upload" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_upload"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/button_upload"
        android:src="@drawable/ic_baseline_file_upload_24"
        app:layout_constraintBottom_toBottomOf="@+id/img_upload"
        app:layout_constraintEnd_toEndOf="@+id/img_upload"
        app:layout_constraintStart_toEndOf="@+id/img_upload"
        app:layout_constraintTop_toBottomOf="@+id/img_upload" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:fontFamily="@font/poppins_semi"
        android:text="@string/result_detection"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>